# dialOS

./: .ai-devkit.json  .gitignore  VM_ARCHITECTURE.md  build.ps1  build_emulator.ps1  debug.ps1  dscli.ps1  note.md  output.dsb  platformio.ini  test_file_comprehensive.ds  test_file_optimized.ds  test_parser_debug.ds  test_simple.ds  timer_ast.json
.github/: PROGRESS.md  copilot-instructions.md
.github/instructions/: commands.instructions.md  dialscript_syntax.instructions.md
.github/workflows/: build-compiler-wasm.yml  cmake-multi-platform.yml  publish-appstore.yml
appstore/: README.md  app.js  index.html  index.json  style.css
compiler/: BUILD.md  BYTECODE_COMPLETE.md  CMakeLists.txt  GRAMMAR_ALIGNMENT.md  GRAMMAR_TRANSFER_COMPLETE.md  MIGRATION.md  Makefile  QUICKSTART.md  README.md  SUMMARY.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ast.cpp  ast.h  ast_json.cpp  ast_json.h  ast_printer.cpp  ast_printer.h  bytecode.cpp  bytecode.h  bytecode_compiler.cpp  bytecode_compiler.h  compile.cpp  js_api.cpp  lexer.cpp  lexer.h  parse_file.cpp  parser.cpp  parser.h  sdl_platform.cpp  sdl_platform.h  setup_sdl_windows.bat  test_all.ps1  test_parser.cpp  test_parser.vcxproj  test_parser.vcxproj.filters  test_sdl_emulator.cpp  test_vm.cpp  test_vm.vcxproj  test_vm.vcxproj.filters
docs/: BUILD_SYSTEM.md  CHANGELOG.md  COLOR_CONSTANTS.md  FUNCTION_VALUE_DESIGN.md  FUNCTION_VALUE_IMPLEMENTATION.md  KERNEL_API_SPEC.md  NATIVE_FUNCTIONS.md  README.md  SCRIPT_MIGRATION.md  VM_APPLET_GUIDE.md  VM_ARCHITECTURE.md
docs/ai/design/: README.md
docs/compiler/: AST_LINE_COLUMN_UPDATE.md  JSON_OUTPUT.md  QUICKSTART.md  README.md  SDL_EMULATOR.md
dotnet/: .gitignore  DialOS.sln
dotnet/DialOS.Gui/: DialOS.Gui.csproj  Form1.Designer.cs  Form1.cs  GuiPlatform.cs  Program.cs
dotnet/DialOS.Maui/: App.xaml  App.xaml.cs  DialOS.Maui.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
dotnet/DialOS.Maui/Components/: _Imports.razor
dotnet/DialOS.Maui/Components/Layout/: NavMenu.razor
dotnet/DialOS.Maui/wwwroot/: index.html
dotnet/DialOS.Runtime/Bytecode/: BytecodeModule.cs  BytecodeReader.cs  Metadata.cs  Opcode.cs
dotnet/DialOS.Runtime/Platform/: ConsolePlatform.cs  IPlatform.cs  PlatformBase.cs
dotnet/DialOS.Runtime/VM/: CallFrame.cs  ExceptionHandler.cs  ExecutionEngine.cs  VMResult.cs  VMState.cs
dotnet/DialOS.Runtime/Values/: DsArray.cs  DsFunction.cs  DsObject.cs  Value.cs  ValuePool.cs  ValueType.cs
dotnet/DialOS.Tests/: BytecodeTests.cs  DialOS.Tests.csproj  VMTests.cs  ValueTests.cs
gui_designer/: README.md  app.js  index.html  style.css
include/: applet_manager.h  bytecode.h  esp32_platform.h  vm_value.h
include/kernel/: kernel.h  memory.h  ramfs.h  system.h  task.h
include/vm/: platform.h  vm_core.h
lsp/: Cargo.toml  Package.swift  binding.gyp  go.mod  package.json  pyproject.toml  setup.py  test.ds  test_expressions.ds  tree-sitter.json
lsp/bindings/c/: tree-sitter-dialscript.pc.in
lsp/bindings/c/tree_sitter/: tree-sitter-dialscript.h
lsp/src/: node-types.json  parser.c
lsp/tree-sitter-dialscript/: CMakeLists.txt  Makefile  grammar.js  tree-sitter.json
lsp/tree-sitter-dialscript/queries/: highlights.scm
lsp/tree-sitter-dialscript/src/: grammar.json
scripts/: appstore.ds  builtin_applets.txt  counter_applet.ds  counter_applet.dsb  counter_applet.h  hello_world.ds  layout.ds  sample_calculator.ds  simple_file_test.ds  simple_function_test.ds  simple_function_test.dsb  simple_template.ds  test.ds  test_app_store.ds  test_array.ds  test_bounds_error.ds  test_callback_apis.ds  test_callbacks.ds  test_callbacks_simple.ds  test_circle_simple.ds  test_colors.ds  test_counter.ds  test_error.ds  test_error_display.ds  test_expressions.ds  test_file_api.ds  test_file_exist.ds  test_for_loop.ds  test_function_values.ds  test_gc_local_frame.ds  test_graphic.ds  test_graphics_full.ds  test_http_download.ds  test_invalid.ds  test_locations.ds  test_locations_simple.ds  test_memory_leak.ds  test_network_apis.ds  test_network_simple.ds  test_new_apis.ds  (+23 more)
sdl_filesystem/: test.txt
src/: Encoder.cpp  applet_manager.cpp  esp32_platform.cpp  esp32_platform.h  main.cpp  vm_applet_data.h  vm_builtin_applets.h
src/kernel/: kernel.cpp  memory.cpp  ramfs.cpp  system.cpp  task.cpp
src/vm/: bytecode.cpp  bytecode.h  platform.cpp  platform.h  vm_core.cpp  vm_core.h  vm_value.cpp  vm_value.h
